🔧 chore: 코드 리뷰 반영 - 생성자 삭제 - 메서드 변경 🔗 Resolves: #65